# NeuroSim

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
neurosim/: __init__.py  connectivity.py  harmonize.py  physics.py  simulation.py
notebook/: 01_fc_vs_ec_validation.ipynb  validation_pipeline.py
tests/: test_connectivity.py  test_physics.py
